# python-based-mne

./: .gitattributes  .gitignore  README.md  questions.txt
10-heat-transfer/: README.md  test.py
3-engineering-problem-solving/: README.md
4-thermodynamics/: README.md
5-elements-of-nuclear-engineering/: README.md
6-computer-applications-in-me/: README.md
7-fluid-mechanics/: README.md
8-machine-design/: README.md
9-control-of-mechanical-systems/: README.md
computer-applications-in-me/: README.md  main.py
control-of-mechanical-systems/: Lab_4.ipynb  README.md  bode_plot_demo.ipynb  lab4Data.mat  list_functions.py  pyproject.toml  stepdata.csv  test.py
control-of-mechanical-systems/lab10/: Lab_10.ipynb  Lab_10_skeleton.ipynb  custom_functions.py  data3.csv
control-of-mechanical-systems/lab13/: Lab_13.ipynb
control-of-mechanical-systems/lab4/: Lab_4.ipynb  custom_functions.py
elements-of-nuclear-engineering/: README.md
engineering-problem-solving/: README.md  intro_to_python.ipynb  intro_to_python.py  intro_to_python_lib.ipynb  main.py  sos.py  stoplight.py
fluid-mechanics/: README.md
heat-transfer/: README.md
intro-to-nuclear-engineering/: README.md
machine-design/: README.md
measurements-and-instrumentation/: README.md
mechatronics/: Sensors Presentation.pptx  main.py  mechatronics_project3.cpp  old_vl53l1x.py  run_motor.py  time_of_flight_vl53l1x.py  time_of_flight_vl6180x.py  ultrasonic.py  vl53l1x.py
thermodynamics/: README.md
thesis/: main.aux  main.fdb_latexmk  main.fls  main.lof  main.tex  main.toc
(+153 files in other folders)
