[tool.poetry]
name = "control of mechanical systems"
version = "0.1.0"
description = "Code package to recreate Matlab assignments in Python."
authors = ["Zakary Oster"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
control = "^0.9.4"
ipykernel = "^6.25.2"
ipywidgets = "^8.1.0"
ipympl = "^0.9.3"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
